--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "dotenv": "^16.3.1",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
-    "mongoose": "6.11.1",
+    "gapi-script": "^1.2.0",
+    "mongoose": "^6.11.1",
     "next": "13.4.3",
     "next-auth": "^4.22.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-google-login": "^5.2.2",
     "swr": "^2.1.5"
   }
 }
