--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "docker": "^1.0.0",
     "dotenv": "^16.3.1",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
@@ -20,6 +21,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-google-login": "^5.2.2",
+    "sharp": "^0.33.1",
     "swr": "^2.1.5"
   }
 }
